fix layout issues and error on missing object

--- a/extensions/reports/public/ReportEditor.scss
+++ b/extensions/reports/public/ReportEditor.scss
@@ -13,6 +13,15 @@
   justify-content: space-between;
 }
 
+.listContainer {
+  overflow: auto;
+  position: relative;
+}
+
+.listContainer > div {
+  position: absolute !important;
+}
+
 .item {
   display: flex;
   flex-direction: column;
